[project]
name = "viona-ai-agent-server"
version = "0.1.0"
description = "Production AI Agent Server for Viona SaaS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.2.0",
    "redis>=5.0.0",
    "motor>=3.3.0",
    "aiokafka>=0.10.0",
    "pyjwt[crypto]>=2.8.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
